# gtfs-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
docs/: diff_command.md  fetch_command.md  static_command.md  view_command.md
src/gtfs_cli/: __main__.py  main.py
src/gtfs_cli/commands/: fetch.py  static.py  view.py
src/gtfs_cli/engines/: base.py  trip_update.py
tests/: test_fetch.py  test_static_info.py  test_trip_update_engine.py  test_view.py
tests/fixtures/: ttc_trip_update_example.pb
tests/fixtures/ttc_static/: shapes.txt  stop_times.txt  trips.txt
