[project]
name = "gtfs-cli"
version = "0.3.0"
description = "CLI tool to fetch, archive, process and explore GTFS-RT data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Vladyslav Moisieienkov" }]
keywords = ["gtfs", "gtfs-rt", "transit", "cli", "realtime"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "gtfs-realtime-bindings>=1.0.0",
    "httpx>=0.28.0",
    "protobuf>=5.0.0",
    "polars>=1.0.0",
]

[project.scripts]
gtfs-cli = "gtfs_cli.main:app"

[project.urls]
Homepage = "https://github.com/VMois/gtfs-cli"
Repository = "https://github.com/VMois/gtfs-cli"
"Bug Tracker" = "https://github.com/VMois/gtfs-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gtfs_cli"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
